--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Marcus Brand - Zertifizierter TÜV Prüfer
 
 {% include sections/about.html %}
 
-{% include sections/offer.html offer-text="<strong>Ihre Werkstatt-Prüfung: </strong> Nun in Bochum" button-text="Vereinbare einen Termin" %}
+{% include sections/offer.html offer-text="<strong>Ihre Werkstatt-Prüfung: </strong> Nun in Herne" button-text="Vereinbare einen Termin" %}
 
 {% include sections/portfolio.html %}
 
