--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ title: Marcus Brand - HU Prüfer
 
 {% include sections/portfolio.html %}
 
+{% include sections/prices.html %}
 
 {% include sections/contact.html %}
 
